# glut-tasks

./: .gitignore  CMakeLists.txt  cw.cpp  lab3.cpp  main.cpp
